// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test BaseLLM 1`] = `
"_grp: 1
_type: not_implemented
_id:
  - inference
  - chat
  - llms
  - test_llm
  - TestLLM
"
`;

exports[`test BaseLLM 2`] = `
"generations:
  - output: this is a prompt.
    info:
      index: 0
llmOutput: {}
"
`;

exports[`test BaseLLM 3`] = `
"generations:
  - output: |-
      System: this is a system message
      Human: this is a human message
      AI: this is a bot message
    info:
      index: 0
llmOutput: {}
"
`;

exports[`test BaseLLM 4`] = `
"generations:
  - output: |-
      Human: this is a human message 1
      Human: this is a human message 2
      Human: this is a human message 3
    info:
      index: 0
llmOutput: {}
"
`;

exports[`test BaseLLM 5`] = `
"generations:
  - output: this is a prompt.
    info:
      index: 0
llmOutput: {}
"
`;

exports[`test BaseLLM 6`] = `
"generations:
  - output: |-
      System: this is a system message
      Human: this is a human message
    info:
      index: 0
llmOutput: {}
"
`;

exports[`test BaseLLM 7`] = `
"generations:
  - output: |-
      System: this is a system message
      Human: this is a human message
    info:
      index: 0
llmOutput: {}
"
`;

exports[`test BaseLM 1`] = `
"_grp: 1
_type: not_implemented
_id:
  - tests
  - TestLM
"
`;

exports[`test BaseLM 2`] = `
"generations:
  - output: this is a prompt.
    info:
      index: 0
"
`;

exports[`test BaseLM 3`] = `
"generations:
  - output: |-
      System: this is a system message
      Human: this is a human message
      AI: this is a bot message
    info:
      index: 0
"
`;

exports[`test BaseLM 4`] = `
"generations:
  - output: |-
      Human: this is a human message 1
      Human: this is a human message 2
      Human: this is a human message 3
    info:
      index: 0
"
`;

exports[`test BaseLM 5`] = `
"generations:
  - output: this is a prompt.
    info:
      index: 0
"
`;

exports[`test BaseLM 6`] = `
"generations:
  - output: |-
      System: this is a system message
      Human: this is a human message
    info:
      index: 0
"
`;

exports[`test BaseLM 7`] = `
"generations:
  - output: |-
      System: this is a system message
      Human: this is a human message
    info:
      index: 0
"
`;
